Fix Tailwind CDN load order with defer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sakshi | Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind CDN must be loaded AFTER title/meta -->
+    <script defer src="https://cdn.tailwindcss.com"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
     <style>
