--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="bg-gray-50 text-gray-900">
 
     <!-- HERO SECTION -->
-    <section class="py-20 px-6 max-w-3xl mx-auto" data-aos="fade-up">
+    <section class="py-20 px-6 max-w-3xl mx-auto" data-aos="fade-down">
         <h1 class="text-5xl font-extrabold mb-4">Sakshi</h1>
         <p class="text-lg max-w-xl mb-6">
         CSE undergrad by degree. Content strategist by instinct. <br>
@@ -109,7 +109,7 @@
         </div>
     
         <div class="mb-10">
-        <h3 class="text-xl font-bold">AMC Warranty System @ HAL</h3>
+        <h3 class="text-xl font-bold">AMC Warranty System @ Hindustan Aeronautics Limited</h3>
         <p class="mt-2 text-lg">
             Designed a web app to track aircraft warranty using Streamlit and Oracle. Cut manual work, boosted accountability.
         </p>
