--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body class="bg-gray-50 text-gray-900">
     <header class="sticky top-0 z-50 bg-gray-50 border-b border-gray-200">
     <nav class="max-w-5xl mx-auto px-4 sm:px-6 py-4 flex items-center justify-between">
-        <h1 class="text-xl font-semibold">Sakshi</h1>
+        <h1 class="text-xl font-semibold">SAKSHI</h1>
         <ul class="flex gap-4 text-sm sm:text-base font-medium text-gray-700">
         <li><a href="#about" class="hover:text-black transition">About</a></li>
         <li><a href="#experience" class="hover:text-black transition">Experience</a></li>
@@ -45,7 +45,7 @@
   <!-- HERO SECTION -->
   <section class="py-12 sm:py-20 px-4 sm:px-6 max-w-3xl mx-auto" data-aos="fade-up">
     <div class="text-center max-w-prose mx-auto">
-      <h1 class="text-4xl sm:text-5xl font-extrabold mb-4">Sakshi</h1>
+      <h1 class="text-4xl sm:text-5xl font-extrabold mb-4">SAKSHI</h1>
       <p class="text-base sm:text-lg leading-relaxed mb-6">
         CSE undergrad by degree. Content strategist by instinct. <br>
         I build smart systems and bold stories — and I’m just getting started.
