--- a/index.html
+++ b/index.html
@@ -24,10 +24,19 @@
         scroll-behavior: smooth;
     }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+
+    <style>
+    h1, h2, h3 {
+        font-family: 'Orbitron', sans-serif;
+    }
+    </style>
+
 
 </head>
 
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-black text-white bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1500&q=80');">
+    <div class="bg-black bg-opacity-80 min-h-screen">
     <header class="sticky top-0 z-50 bg-gray-50 border-b border-gray-200">
     <nav class="max-w-5xl mx-auto px-4 sm:px-6 py-4 flex items-center justify-between">
         <h1 class="text-xl font-semibold">SAKSHI</h1>
@@ -51,8 +60,8 @@
         I build smart systems and bold stories — and I’m just getting started.
       </p>
       <div class="flex flex-col sm:flex-row gap-4 items-center justify-center">
-        <a href="assets/resume.pdf" class="px-6 py-2 bg-black text-white rounded-full hover:bg-gray-800 transition">Resume</a>
-        <a href="mailto:sakshiny08@gmail.com" class="px-6 py-2 border border-black text-black rounded-full hover:bg-gray-100 transition">Say Hi</a>
+        <a href="assets/resume.pdf" class="px-6 py-2 bg-white text-black rounded-full hover:bg-gray-200 transition">Resume</a>
+        <a href="mailto:sakshiny08@gmail.com" class="px-6 py-2 border border-white text-white rounded-full hover:bg-gray-800 transition">Say Hi</a>
       </div>
     </div>
   </section>
@@ -182,7 +191,7 @@
   <section id="contact" class="py-12 sm:py-20 px-4 sm:px-6 max-w-3xl mx-auto text-center" data-aos="fade-up">
     <div class="max-w-prose mx-auto">
       <h2 class="text-3xl font-semibold mb-4">Let’s Connect</h2>
-      <p class="text-base sm:text-lg mb-6 leading-relaxed">Got a project, opportunity, or playlist recommendation? I’m all ears.</p>
+      <p class="text-base sm:text-lg mb-6 leading-relaxed">Got a project, opportunity, or a playlist recommendation? I’m all ears.</p>
       <div class="flex flex-col sm:flex-row items-center justify-center gap-4 text-base sm:text-lg">
         <a href="mailto:sakshiny08@gmail.com" class="underline hover:text-gray-500">sakshiny08@gmail.com</a>
         <a href="https://www.linkedin.com/in/sakshi-6a7a60282" target="_blank" class="underline hover:text-gray-500">LinkedIn</a>
@@ -204,6 +213,6 @@
       once: false
     });
   </script>
-
+</div>
 </body>
 </html>
