Add dark theme with universe background

--- a/index.html
+++ b/index.html
@@ -23,19 +23,11 @@
     html {
         scroll-behavior: smooth;
     }
-    </style>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
-
-    <style>
-    h1, h2, h3 {
-        font-family: 'Orbitron', sans-serif;
-    }
-    </style>
-
+</style>
 
 </head>
 
-<body class="bg-black text-white bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1500&q=80');">
+<body class="bg-black text-white bg-cover bg-center" style="background-image: url('https://unsplash.com/photos/milky-way-asuyh-_ZX54');">
     <div class="bg-black bg-opacity-80 min-h-screen">
     <header class="sticky top-0 z-50 bg-gray-50 border-b border-gray-200">
     <nav class="max-w-5xl mx-auto px-4 sm:px-6 py-4 flex items-center justify-between">
