Add dark theme with universe background

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body class="bg-black text-white bg-cover bg-center" style="background-image: url('https://unsplash.com/photos/milky-way-asuyh-_ZX54');">
+<body class="bg-black text-white bg-cover bg-center" style="background-image: url('https://www.pexels.com/video/starry-night-sky-timelapse-5818973/');">
     <div class="bg-black bg-opacity-80 min-h-screen">
     <header class="sticky top-0 z-50 bg-gray-50 border-b border-gray-200">
     <nav class="max-w-5xl mx-auto px-4 sm:px-6 py-4 flex items-center justify-between">
