Use local starry video background

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 <body class="text-white">
   <!-- Video Background -->
   <video autoplay muted loop playsinline class="fixed top-0 left-0 w-full h-full object-cover z-[-1]">
-    <source src="https://player.vimeo.com/external/5818973.sd.mp4?s=38fd8b4f4603be6204f3f74d9c50ad40eeb109e2&profile_id=164&oauth2_token_id=57447761" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <source src="assets/starry.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
 
   <!-- Overlay for readability -->
   <div class="bg-black bg-opacity-80 min-h-screen">
@@ -106,7 +107,7 @@
         </div>
         <div>
           <h3 class="text-xl font-bold">Honorary Reporter – Korea.net</h3>
-          <p class="text-sm text-gray-600">May 2023 – Present | Remote</p>
+          <p class="text-sm text-gray-600">May 2023 – April 2025 | Remote</p>
           <p class="mt-2">Wrote cultural features bridging India and South Korea. Mixed research with relatability to reach global audiences.</p>
         </div>
         <div>
