Use local starry video background

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
 
     <!-- HERO SECTION -->
-    <section class="py-20 px-4 sm:px-6 max-w-3xl mx-auto text-center" data-aos="fade-up">
+    <section class="py-20 px-4 sm:px-6 max-w-3xl mx-auto text-center" data-aos="fade-down">
       <h1 class="text-4xl sm:text-5xl font-extrabold font-sora mb-4">Sakshi</h1>
       <p class="text-base sm:text-lg leading-relaxed mb-6 font-inter">
         CSE undergrad by degree. Content strategist by instinct.<br />
