--- a/index.html
+++ b/index.html
@@ -34,53 +34,52 @@
     Your browser does not support the video tag.
   </video>
 
-  <!-- Overlay Wrapper -->
-  <div class="bg-black bg-opacity-80 min-h-screen">
-
-    <!-- Navbar -->
-    <header class="sticky top-0 z-50 bg-black bg-opacity-80 border-b border-gray-800">
-      <nav class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
-        <h1 class="text-xl font-semibold">SAKSHI</h1>
-        <ul class="flex gap-6 text-sm sm:text-base font-medium text-gray-200">
-          <li><a href="#about" class="hover:text-white transition">About</a></li>
-          <li><a href="#experience" class="hover:text-white transition">Experience</a></li>
-          <li><a href="#projects" class="hover:text-white transition">Projects</a></li>
-          <li><a href="#skills" class="hover:text-white transition">Skills</a></li>
-          <li><a href="#contact" class="hover:text-white transition">Contact</a></li>
-        </ul>
+  <!-- Layout Wrapper -->
+  <div class="flex min-h-screen">
+    <!-- Sidebar Navigation -->
+    <aside class="w-48 bg-black bg-opacity-80 border-r border-gray-800 py-10 px-4 sticky top-0 h-screen z-50">
+      <div class="text-xl font-bold mb-10 tracking-widest">SAKSHI</div>
+      <nav class="space-y-4 text-sm font-medium text-gray-200">
+        <a href="#about" class="block hover:text-white transition">About</a>
+        <a href="#experience" class="block hover:text-white transition">Experience</a>
+        <a href="#projects" class="block hover:text-white transition">Projects</a>
+        <a href="#skills" class="block hover:text-white transition">Skills</a>
+        <a href="#contact" class="block hover:text-white transition">Contact</a>
       </nav>
-    </header>
+    </aside>
 
-    <!-- HERO SECTION -->
-    <section class="py-[120px] px-6 max-w-6xl mx-auto text-center" data-aos="fade-down">
-      <h1 class="text-4xl sm:text-5xl font-extrabold mb-4">SAKSHI</h1>
-      <p class="text-lg sm:text-xl leading-relaxed text-gray-300 max-w-2xl mx-auto mb-6">
-        CSE undergrad by degree. Content strategist by instinct. I build smart systems and bold stories — and I’m just getting started.
-      </p>
-      <div class="flex flex-col sm:flex-row gap-4 justify-center">
-        <a href="assets/resume.pdf" class="px-6 py-2 bg-white text-black rounded-full hover:bg-gray-200 transition">Resume</a>
-        <a href="mailto:sakshiny08@gmail.com" class="px-6 py-2 border border-white text-white rounded-full hover:bg-white hover:text-black transition">Say Hi</a>
-      </div>
-    </section>
+    <!-- Main Content -->
+    <main class="flex-1">
+      <!-- HERO SECTION -->
+      <section class="py-[120px] px-6 max-w-6xl mx-auto text-center" data-aos="fade-down">
+        <h1 class="text-4xl sm:text-5xl font-extrabold mb-4 tracking-widest">SAKSHI</h1>
+        <p class="text-lg sm:text-xl leading-relaxed text-gray-300 max-w-2xl mx-auto mb-6">
+          CSE undergrad by degree. Content strategist by instinct. I build smart systems and bold stories — and I’m just getting started.
+        </p>
+        <div class="flex flex-col sm:flex-row gap-4 justify-center">
+          <a href="assets/resume.pdf" class="px-6 py-2 bg-white text-black rounded-full hover:bg-gray-200 transition">Resume</a>
+          <a href="#contact" class="px-6 py-2 border border-white text-white rounded-full hover:bg-white hover:text-black transition">Say Hi</a>
+        </div>
+      </section>
 
-    <!-- ABOUT SECTION -->
-    <section id="about" class="py-[120px] px-6 max-w-6xl mx-auto" data-aos="fade-up">
-      <div class="max-w-3xl mx-auto">
-        <h2 class="text-4xl font-semibold tracking-tight mb-6">About Me</h2>
-        <p class="text-lg leading-relaxed text-gray-300 mb-6">
-          I’m a Computer Science student with 2+ years of experience blending tech with storytelling — from designing warranty systems at HAL to crafting SEO-driven content for global startups.
-        </p>
-        <p class="text-lg leading-relaxed text-gray-300 mb-6">
-          I specialize in making ideas clear, engaging, and scalable. Whether it's a product demo, a data-backed blog, or a user dashboard — I shape it with precision and purpose.
-        </p>
-        <ul class="list-disc pl-5 text-lg text-gray-300 space-y-2">
-          <li><strong>Tech Stack:</strong> Python, SQL, PL/SQL, Streamlit, OpenCV, HTML/CSS/JS</li>
-          <li><strong>Creative Stack:</strong> SEO, Copywriting, Figma, Canva, Product Messaging</li>
-          <li><strong>Tools I Use:</strong> Git, MS Excel, Google Suite, Notion</li>
-          <li><strong>Soft Skills:</strong> Communication, Time Management, Adaptability</li>
-        </ul>
-      </div>
-    </section>
+      <!-- ABOUT SECTION -->
+      <section id="about" class="py-[120px] px-6 max-w-6xl mx-auto border-t border-gray-800" data-aos="fade-up">
+        <div class="max-w-3xl mx-auto">
+          <h2 class="text-4xl font-semibold tracking-tight mb-6">About Me</h2>
+          <p class="text-lg leading-relaxed text-gray-300 mb-6">
+            I’m a Computer Science student with 2+ years of experience blending tech with storytelling — from designing warranty systems at HAL to crafting SEO-driven content for global startups.
+          </p>
+          <p class="text-lg leading-relaxed text-gray-300 mb-6">
+            I specialize in making ideas clear, engaging, and scalable. Whether it's a product demo, a data-backed blog, or a user dashboard — I shape it with precision and purpose.
+          </p>
+          <ul class="list-disc pl-5 text-lg text-gray-300 space-y-2">
+            <li><strong>Tech Stack:</strong> Python, SQL, PL/SQL, Streamlit, OpenCV, HTML/CSS/JS</li>
+            <li><strong>Creative Stack:</strong> SEO, Copywriting, Figma, Canva, Product Messaging</li>
+            <li><strong>Tools I Use:</strong> Git, MS Excel, Google Suite, Notion</li>
+            <li><strong>Soft Skills:</strong> Communication, Time Management, Adaptability</li>
+          </ul>
+        </div>
+      </section>
 
     <!-- EXPERIENCE SECTION -->
     <section id="experience" class="py-[120px] px-6 max-w-6xl mx-auto" data-aos="fade-up">
@@ -201,6 +200,8 @@
     <footer class="py-6 text-center text-sm text-gray-500">
       © 2025 Sakshi. All rights reserved.
     </footer>
+  </div>
+</main>
   </div>
 
   <!-- AOS Animation JS -->
